--- a/.github/workflows/publish-java-gradle.yml
+++ b/.github/workflows/publish-java-gradle.yml
@@ -20,4 +20,4 @@ jobs:
           arguments: publish
         env:
           GITHUB_TOKEN: ${{ secrets.JAVA_TOKEN }}
-  # this is publishing gradle package1
+  # this is publishing gradle package to github
