--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,7 @@ publishing {
 }
 
 wrapper {
-    gradleVersion = "7.3.3"
+    gradleVersion = "6.5"
+  <!-- gradleVersion = "7.3.3" -->
     distributionType = Wrapper.DistributionType.ALL
 }
